--- a/templates/adicionar_usuario.html
+++ b/templates/adicionar_usuario.html
@@ -1,4 +1,4 @@
-<h2>Adicionar Novo Usúario</h2>
+<h2>Inscrever-Se </h2>
 <div class="row">
   <div class="col-md-6">
   <form novalidate name="AddNewForm" id="add-new-form" method="post" action="">
@@ -8,14 +8,11 @@
     </div>
     
     <div class="form-group">
-      <label>Repetir Senha:</label>
+      <label>Senha:</label>
       <input class="form-control" type="text" ng-model="usuario.password" required />
     </div>
     
-    <div class="form-group">
-      <label for="repetir_senha">Senha:</label>
-      <input class="form-control" type="text" ng-model="usuario.password" required />
-    </div>
+    
     
     <div class="form-group">
       <label for="email">Email:</label>
@@ -31,7 +28,7 @@
     <div class="form-group">
       <label for="cidade">Cidade:</label>
       <input class="form-control" type="text" ng-model="usuario.city" required />
-    </div
+    </div>
     
     <div class="form-group">
       <label for="Estado">Estado:</label>
@@ -42,10 +39,6 @@
       <label for="CEP">CEP:</label>
       <input class="form-control" type="text" ng-model="usuario.postalCode" required />
     </div>
-    
-    
-    
-    
     <button class="btn btn-primary" ng-disabled="AddNewForm.$invalid || isUnchanged(usuario)" id="add-new-btn" ng-click="add_new(usuario)">Salvar!</button>
     <a href="#/" class="btn">Cancel</a>
   </form>
