--- a/templates/editar.html
+++ b/templates/editar.html
@@ -27,7 +27,7 @@
     <div class="form-group">
       <label for="cidade">Cidade:</label>
       <input class="form-control" type="text" ng-model="usuario.city"  value = "{{usuario.city}}" required  />
-    </div
+    </div>
     
     <div class="form-group">
       <label for="Estado">Estado:</label>
@@ -41,8 +41,8 @@
     
     
     
-    <button class="btn btn-primary" ng-disabled="AddNewForm.$invalid || isUnchanged(user)" id="add-new-btn" ng-click="update(user)">Update <span class="glyphicon glyphicon-floppy-disk"></span></button>
-    <button class="btn btn-danger" ng-click="delete(user)">Delete <span class="glyphicon glyphicon-trash"></span></button>
+    <button class="btn btn-primary" ng-disabled="AddNewForm.$invalid || isUnchanged(user)" id="add-new-btn" ng-click="update(usuario)">Update <span class="glyphicon glyphicon-floppy-disk"></span></button>
+    <button class="btn btn-danger" ng-click="delete(usuario)">Delete <span class="glyphicon glyphicon-trash"></span></button>
     <a href="#/" class="btn">Cancel</a>
     
   </form>
