Corrigido querys sql e valores dos formularios

--- a/templates/adicionar_usuario.html
+++ b/templates/adicionar_usuario.html
@@ -9,7 +9,7 @@
     
     <div class="form-group">
       <label>Senha:</label>
-      <input class="form-control" type="text" ng-model="usuario.password" required />
+      <input class="form-control" type="password" ng-model="usuario.password" required />
     </div>
     
     
