--- a/templates/editar.html
+++ b/templates/editar.html
@@ -1,7 +1,7 @@
 <h2>Editar Usuário</h2>
 <div class="row">
   <div class="col-md-6">
-  <form novalidate  ng-repeat = "usuario in usuario"        name="AddNewForm" id="add-new-form" method="post" action="">
+  <form novalidate  ng-repeat = "usuario in usuarios"        name="AddNewForm" id="add-new-form" method="post" action="">
  <input type="hidden" ng-model= "usuario.id" value="{{usuario.id}}" />
     <div class="form-group">
       <label for="customerName">Nome de Usúario:</label>
@@ -10,7 +10,7 @@
     
     <div class="form-group">
       <label>Repetir Senha:</label>
-      <input class="form-control" type="text" ng-model="usuario.password" value ="{{usuario.password}}" required />
+      <input class="form-control" type="password" ng-model="usuario.password" value ="{{usuario.password}}" required />
     </div>
     
     <div class="form-group">
@@ -41,7 +41,7 @@
     
     
     
-    <button class="btn btn-primary" ng-disabled="AddNewForm.$invalid || isUnchanged(user)" id="add-new-btn" ng-click="update(usuario)">Update <span class="glyphicon glyphicon-floppy-disk"></span></button>
+    <button class="btn btn-primary" ng-disabled="AddNewForm.$invalid || isUnchanged(usuario)" id="add-new-btn" ng-click="update(usuario)">Update <span class="glyphicon glyphicon-floppy-disk"></span></button>
     <button class="btn btn-danger" ng-click="delete(usuario)">Delete <span class="glyphicon glyphicon-trash"></span></button>
     <a href="#/" class="btn">Cancel</a>
     
